--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
+    "react-hot-loader": "^3.0.0-beta.5",
     "redbox-react": "^1.2.2",
+    "redux-logger": "^2.6.1",
     "rimraf": "^2.4.3",
-    "webpack": "^1.12.9",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   }
 }
