--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "private": true,
   "scripts": {
     "clean": "rimraf dist",
-    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "build": "npm run clean && npm run build:webpack",
+    "build": "npm run clean && webpack --progress --color",
     "lint": "eslint src  --color",
     "start": "node devServer.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.6.1",
-    "html-loader": "^0.4.3",
     "json-loader": "^0.5.4",
     "material-ui": "^0.15.0",
+   
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.1",
@@ -20,6 +19,7 @@
     "redux-form": "^6.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.0",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
@@ -27,6 +27,7 @@
     "babel-preset-stage-2": "^6.1.18",
     "copy-webpack-plugin": "^3.0.1",
     "cross-env": "^1.0.7",
+    "css-loader": "^0.25.0",
     "eslint": "^3.7.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-import": "^1.15.0",
@@ -35,10 +36,20 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "lodash": "^4.16.2",
+    "node-sass": "^3.10.1",
     "react-hot-loader": "^3.0.0-beta.5",
     "redbox-react": "^1.2.2",
     "redux-logger": "^2.6.1",
     "rimraf": "^2.4.3",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "postcss-import": "^8.1.2",
+    "postcss-loader": "^0.13.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   }
