--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "babel-polyfill": "^6.6.1",
     "json-loader": "^0.5.4",
     "material-ui": "^0.15.0",
-   
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.1",
@@ -25,6 +24,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.1.18",
+    "bootstrap": "^3.3.7",
     "copy-webpack-plugin": "^3.0.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.25.0",
@@ -37,10 +37,13 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "jquery": "^3.1.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "lodash": "^4.16.2",
     "node-sass": "^3.10.1",
+    "postcss-import": "^8.1.2",
+    "postcss-loader": "^0.13.0",
     "react-hot-loader": "^3.0.0-beta.5",
     "redbox-react": "^1.2.2",
     "redux-logger": "^2.6.1",
@@ -48,8 +51,6 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "postcss-import": "^8.1.2",
-    "postcss-loader": "^0.13.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   }
