--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && webpack --progress --color",
-    "lint": "eslint src  --color",
+    "lint": "eslint src --fix --color",
     "start": "node devServer.js"
   },
   "dependencies": {
@@ -12,10 +12,7 @@
     "material-ui": "^0.15.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-redux": "^4.4.1",
-    "react-tap-event-plugin": "^1.0.0",
-    "redux": "^3.3.1",
-    "redux-form": "^6.0.2"
+    "react-tap-event-plugin": "^1.0.0"  
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
@@ -44,9 +41,8 @@
     "node-sass": "^3.10.1",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.13.0",
-    "react-hot-loader": "^3.0.0-beta.5",
-    "redbox-react": "^1.2.2",
-    "redux-logger": "^2.6.1",
+    "react-hot-loader": "^1.3.0",
+    "redbox-react": "^1.2.2",  
     "rimraf": "^2.4.3",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
