--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "material-ui": "^0.15.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-tap-event-plugin": "^1.0.0"  
+    "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-react-jsx-img-import": "^0.1.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.1.18",
@@ -42,7 +43,7 @@
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.13.0",
     "react-hot-loader": "^1.3.0",
-    "redbox-react": "^1.2.2",  
+    "redbox-react": "^1.2.2",
     "rimraf": "^2.4.3",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
