--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "start": "node devServer.js"
   },
   "dependencies": {
-    "babel-polyfill": "^6.6.1",
-    "json-loader": "^0.5.4",
-    "material-ui": "^0.15.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-tap-event-plugin": "^1.0.0",
     "autoprefixer": "^6.5.0",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
     "babel-plugin-transform-react-jsx-img-import": "^0.1.2",
+    "babel-polyfill": "^6.6.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.1.18",
     "bootstrap": "^3.3.7",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.2",
+    "redux": "^3.6.0"
+  },
+  "devDependencies": {
     "copy-webpack-plugin": "^3.0.1",
-    "cross-env": "^1.0.7",
+    "cross-env": "^1.0.8",
     "css-loader": "^0.25.0",
     "eslint": "^3.7.0",
     "eslint-loader": "^1.5.0",
@@ -37,22 +38,26 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "jquery": "^3.1.1",
+    "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "lodash": "^4.16.2",
+    "material-ui": "^0.15.0",
     "node-sass": "^3.10.1",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.13.0",
     "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-tap-event-plugin": "^1.0.0",
     "redbox-react": "^1.2.2",
+    "redux-logger": "^2.7.0",
+    "redux-thunk": "^2.1.0",
     "rimraf": "^2.4.3",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
-  },
-  "devDependencies": {
-    "cross-env": "^1.0.8"
   }
 }
