--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,11 @@
   "plugins": [
     "react"
   ],
+  "settings":{
+    "import/extensions":[
+      ".js",".jsx"
+    ]
+  },
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module",
