--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["react", "es2015", "stage-2"],
-   "plugins": ["transform-react-jsx-img-import"]
+   "plugins": ["transform-react-jsx-img-import",  "react-hot-loader/babel"]
 }
