--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.1.18",
     "bootstrap": "^3.3.7",
+    "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.2",
+    "react-hot-loader": "latest",
     "redux": "^3.6.0"
   },
   "devDependencies": {
@@ -46,10 +48,9 @@
     "node-sass": "^3.10.1",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.13.0",
-    "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redbox-react": "^1.2.2",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
@@ -58,6 +59,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
